# bs-vs-heston

./: .gitignore  README.md  main.py  pyproject.toml
data/: spy_options.csv  spy_options_enriched.csv  spy_options_raw.csv
notebook/: 01_data_acquisition.ipynb  02_black_scholes.ipynb  03_heston_calibration.ipynb  04_comparison.ipynb  black-scholes_model.ipynb  data_acquisition.ipynb  heston_model.ipynb
src/: black_scholes.py  greeks_bs.py  market_data.py  types.py  utils.py  visualization.py
src/heston/: __init__.py  calibration.py  characteristic.py  greeks_hs.py  pricing.py  smile.py
test/: test_black_scholes.py  test_calibration.py  test_greeks.py  test_heston_pricing.py  test_market_data.py
